diesel_compile_tests/tests/fail/derive_deprecated/deprecated_postgres_type.stderr
error: unexpected end of input, expected parentheses
       help: The correct format looks like `#[diesel(postgres_type(name = "foo", schema = "public"))]`
 --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:6:3
  |
6 | #[postgres]
  |   ^^^^^^^^

error: expected `oid` and `array_oid` attribute or `name` attribute
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:10:11
   |
10 | #[postgres()]
   |           ^^

error: expected parentheses
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:14:12
   |
14 | #[postgres = "foo"]
   |            ^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(postgres_type(name = "foo", schema = "public"))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:18:12
   |
18 | #[postgres(type_name)]
   |            ^^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:22:21
   |
22 | #[postgres(type_name())]
   |                     ^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:26:24
   |
26 | #[postgres(type_name = 1)]
   |                        ^

error: unexpected `oid` when `name` is present
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:30:31
   |
30 | #[postgres(type_name = "foo", oid = "2", array_oid = "3")]
   |                               ^^^

error: unexpected `array_oid` when `name` is present
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:34:31
   |
34 | #[postgres(type_name = "foo", array_oid = "3")]
   |                               ^^^^^^^^^

error: expected `oid` and `array_oid` attribute or `name` attribute
       help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:38:11
   |
38 | #[postgres(oid = "2")]
   |           ^^^^^^^^^^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:42:18
   |
42 | #[postgres(oid = 1, array_oid = "1")]
   |                  ^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:46:35
   |
46 | #[postgres(oid = "1", array_oid = 1)]
   |                                   ^

error: unknown attribute, expected one of `oid`, `array_oid`, `type_name`
  --> tests/fail/derive_deprecated/deprecated_postgres_type.rs:54:12
   |
54 | #[postgres(what)]
   |            ^^^^
